--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing ="20">
         <tr>
-            <td><img src="D:\1st year\web dev\vs code\images\aditya-modified.png" alt="aditya profile pic"></td>
+            <td><img src="https://github.com/adityarathor007/cv/blob/main/aditya-modified.png" alt="aditya profile pic"></td>
             <td> <h1>Aditya Rathor</h1>
                 <p><em> 1stYear B.tech student at <strong><a href="https://www.iitj.ac.in/">IIT Jodhpur</a></strong></em></p>
                 <p> Currently in Artificial Intelligence and Data Science</p></td>
