--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing ="20">
         <tr>
-            <td><img src="https://github.com/adityarathor007/cv/blob/main/aditya-modified.png" alt="aditya profile pic"></td>
+            <td><img src="aditya-modified.png" alt="aditya profile pic"></td>
             <td> <h1>Aditya Rathor</h1>
                 <p><em> 1stYear B.tech student at <strong><a href="https://www.iitj.ac.in/">IIT Jodhpur</a></strong></em></p>
                 <p> Currently in Artificial Intelligence and Data Science</p></td>
@@ -22,9 +22,9 @@
         <li>Delhi Public School Chandigarh</li>
         <li>Sri guru Harikrishan Model School Chandigarh </li>
     </ol>
-    <a href="D:\1st year\web dev\vs code\hobbies.html">My hobbies</a>
+    <a href="hobbies.html">My hobbies</a>
     <br>
-    <a href="D:\1st year\web dev\vs code\contactdetails.html">How to contact me</a>
+    <a href="contactdetails.html">How to contact me</a>
     <h3>My Education</h3>
     <table border ="1">
         <thead>
